fixes to align btns responsivness

--- a/styles/basics/mq.css
+++ b/styles/basics/mq.css
@@ -314,6 +314,7 @@
 
   .fa-align-right {
     font-size: 1.7em;
+    color: white;
   }
 
   .move-right-btn:hover {
@@ -335,6 +336,7 @@
 
   .fa-align-left {
     font-size: 1.7em;
+    color: white;
   }
 
   .move-left-btn:hover {
@@ -356,6 +358,7 @@
 
   .fa-align-center {
     font-size: 1.7em;
+    color: white;
   }
 
   .move-center-btn:hover {
@@ -684,7 +687,7 @@
     background-color: rgb(161, 43, 0);
     align-items: center;
     justify-content: center;
-    width: 7.5em;
+    width: 8.1em;
     height: 3.6em;
     border-radius: 4.375em;
     border: none;
@@ -705,7 +708,7 @@
     background-color: rgb(0, 161, 134);
     align-items: center;
     justify-content: center;
-    width: 7.5em;
+    width: 8.1em;
     height: 3.6em;
     border-radius: 4.375em;
     border: none;
@@ -726,7 +729,7 @@
     background-color: rgb(125, 0, 59);
     align-items: center;
     justify-content: center;
-    width: 7.5em;
+    width: 8.1em;
     height: 3.6em;
     border-radius: 4.375em;
     border: none;
