--- a/styles/components/editor.css
+++ b/styles/components/editor.css
@@ -302,7 +302,8 @@ canvas {
 }
 
 .fa-align-right {
-  font-size: 1.8em
+  font-size: 1.8em;
+  color: white;
 }
 
 .move-right-btn:hover {
@@ -323,7 +324,8 @@ canvas {
 }
 
 .fa-align-left {
-  font-size: 1.8em
+  font-size: 1.8em;
+  color: white;
 }
 
 .move-left-btn:hover {
@@ -344,7 +346,8 @@ canvas {
 }
 
 .fa-align-center {
-  font-size: 1.8em
+  font-size: 1.8em;
+  color: white;
 }
 
 .move-center-btn:hover {
